# cisco-ironic-contrib

./: .coveragerc  .gitignore  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  ipa.diff  nova-network-data.diff  openstack-common.conf  pip_install  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
cisco_ironic_contrib/: __init__.py
cisco_ironic_contrib/ironic/: agent.py  pxe.py  pxe_config.template
cisco_ironic_contrib/ironic/cimc/: boot.py  common.py  deploy.py  inspect.py  inspection.py  network.py  vendor.py
cisco_ironic_contrib/ironic_inspector/plugins/: lldp.py
cisco_ironic_contrib/nova/: driver.py
cisco_ironic_contrib/tests/: __init__.py
cisco_ironic_contrib/tests/unit/ironic/: __init__.py
cisco_ironic_contrib/tests/unit/ironic/cimc/: test_boot.py  test_common.py  test_inspect.py  test_network.py  test_vendor.py
cisco_ironic_contrib/tests/unit/ironic_inspector/plugins/: test_lldp.py
cisco_ironic_contrib/tests/unit/nova/: test_driver.py
devstack/: plugin.sh
doc/source/: conf.py  index.rst  installation.rst  usage.rst
