[metadata]
name = cisco-ironic-contrib
summary = Package containing cisco specific ironic work that doesn't fit into the core ironic tree.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    cisco_ironic_contrib

[entry_points]
ironic.drivers =
  pxe_iscsi_cimc_neutron = cisco_ironic_contrib.ironic.pxe:PXEAndCIMCNeutronDriver
  pxe_agent_cimc_neutron = cisco_ironic_contrib.ironic.agent:AgentAndCIMCNeutronDriver

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = cisco_ironic_contrib/locale
domain = cisco-ironic-contrib

[update_catalog]
domain = cisco-ironic-contrib
output_dir = cisco_ironic_contrib/locale
input_file = cisco_ironic_contrib/locale/cisco-ironic-contrib.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = cisco_ironic_contrib/locale/cisco-ironic-contrib.pot
